[package]
name = "selfserv"
version = "0.1.0"
description = "self-hosted sideloading"
authors = [ "aystatic <aystatic@gmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tarpc = "0.30"
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
wyz = "0.5"
